--- a/server/package.json
+++ b/server/package.json
@@ -7,8 +7,11 @@
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
+    "date-fns": "^2.30.0",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "googleapis": "^128.0.0",
     "morgan": "~1.9.1"
   }
 }
