--- a/website/package.json
+++ b/website/package.json
@@ -34,5 +34,8 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.1"
+  },
+  "devDependencies": {
+    "cypress": "^13.6.0"
   }
 }
