--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "jest"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -12,6 +13,7 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "googleapis": "^128.0.0",
+    "jest": "^29.7.0",
     "morgan": "~1.9.1",
     "uuid": "^9.0.1"
   }
