--- a/website/package.json
+++ b/website/package.json
@@ -23,6 +23,7 @@
     "date-fns": "^2.29.3",
     "googleapis": "^128.0.0",
     "graphql": "^16.6.0",
+    "json-2-csv": "^5.0.1",
     "jsonwebtoken": "^9.0.0",
     "neo4j-driver": "^5.7.0",
     "next": "^13.3.1",
