--- a/website/package.json
+++ b/website/package.json
@@ -34,6 +34,7 @@
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
+    "react-modal": "^3.16.1",
     "tailwindcss": "3.3.1"
   },
   "devDependencies": {
